// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioFieldSet /> render() should render a Radio field with label 1`] = `
<fieldset
  class=""
  name="radio-field-2"
>
  <legend
    class="legend"
  >
    I am labelled
  </legend>
  <div
    class="option"
  >
    <label
      class="_label_e6rgs_141 label"
      for="japanese"
    >
      <input
        checked=""
        class="input"
        id="japanese"
        name="radio-field-2"
        type="radio"
      />
      sushis and sashimis
    </label>
  </div>
  <div
    class="option"
  >
    <label
      class="_label_e6rgs_141 label"
      for="mexican"
    >
      <input
        class="input"
        id="mexican"
        name="radio-field-2"
        type="radio"
      />
      tacos and nachos
    </label>
  </div>
</fieldset>
`;

exports[`<RadioFieldSet /> render() should render a disabled RadioField 1`] = `
<fieldset
  class=""
  disabled=""
  name="radio-field-3"
>
  <div
    class="option"
  >
    <label
      class="_label_e6rgs_141 _isDisabled_e6rgs_151 label"
      for="japanese"
    >
      <input
        checked=""
        class="input"
        disabled=""
        id="japanese"
        name="radio-field-3"
        type="radio"
      />
      sushis and sashimis
    </label>
  </div>
  <div
    class="option"
  >
    <label
      class="_label_e6rgs_141 _isDisabled_e6rgs_151 label"
      for="mexican"
    >
      <input
        class="input"
        disabled=""
        id="mexican"
        name="radio-field-3"
        type="radio"
      />
      tacos and nachos
    </label>
  </div>
</fieldset>
`;

exports[`<RadioFieldSet /> render() should render an enabled Radio field 1`] = `
<fieldset
  class=""
  name="radio-field-1"
>
  <div
    class="option"
  >
    <label
      class="_label_e6rgs_141 label"
      for="japanese"
    >
      <input
        checked=""
        class="input"
        id="japanese"
        name="radio-field-1"
        type="radio"
      />
      sushis and sashimis
    </label>
  </div>
  <div
    class="option"
  >
    <label
      class="_label_e6rgs_141 label"
      for="mexican"
    >
      <input
        class="input"
        id="mexican"
        name="radio-field-1"
        type="radio"
      />
      tacos and nachos
    </label>
  </div>
</fieldset>
`;

exports[`<RadioFieldSet /> render() should render captions under radio buttons 1`] = `
<fieldset
  class=""
  name="radio-field-4"
>
  <div
    class="option"
  >
    <label
      class="_label_e6rgs_141 label"
      for="japanese"
    >
      <input
        checked=""
        class="input"
        id="japanese"
        name="radio-field-4"
        type="radio"
      />
      sushis and sashimis
    </label>
    <div
      class="caption caption"
    >
      japanese food
    </div>
  </div>
  <div
    class="option"
  >
    <label
      class="_label_e6rgs_141 label"
      for="mexican"
    >
      <input
        class="input"
        id="mexican"
        name="radio-field-4"
        type="radio"
      />
      tacos and nachos
    </label>
    <div
      class="caption caption"
    >
      mexican food
    </div>
  </div>
</fieldset>
`;
